# hushh-vibe-catalog

./: .bumpversion.cfg  .envrc  .gitignore  .nojekyll  LICENSE  MANIFEST.in  Makefile  Package.swift  README.md  README.qmd  _publish.yml  _quarto.yml  _sidebar.yml  changelog.html  changelog.md  environment.yml  index.html  index.qmd  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml  src
.github/workflows/: docs.yml  main.yml
PyGenSources/hushh/: Catalog.py  CharacterizationEmbeddings.py  Embedding.py  ProductCharacterization.py  ProductInformation.py
PyTests/: test_hello_world.py
SwiftTests/hushh-whisperTests/: hushh_whisperTests.swift
dart/lib/: hushh-catalog_hushh.hcf_generated.dart
docs/: index.html  search.json
docs/notebooks/: Create Catalog.html  KNN Search.html
docs/reference/: catalog.Catalog.html  catalog.html  hcf.Catalog.html  hcf.Category.html  hcf.Embedding.html  hcf.ImageVibe.html  hcf.Product.html  hcf.TextVibe.html  hcf.Vibe.html  hcf.html  index.html
notebooks/: Create Catalog.html  Create Catalog.ipynb  KNN Search.html  KNN Search.ipynb  results.csv
notebooks/Create Catalog_files/libs/bootstrap/: bootstrap.min.css
python/src/hushh/: __init__.py  catalog.py  errors.py  reader.py  version.py
python/src/hushh/hcf/: Brand.py  Catalog.py  Category.py  CharacterizationEmbeddings.py  CompositionMetadata.py  Embedding.py  FlatEmbeddingBatch.py  FlatTensorBatch.py  ImageVibe.py  Product.py  ProductCharacterization.py  ProductInformation.py  ProductMetadata.py  ProductVibes.py  TextVibe.py  Vibe.py  VibeMetadata.py  VibeMode.py  VibeType.py  Vibes.py
python/test/: test_catalog.py  test_embedding_behavior.py  test_hello_world.py
reference/: Brand.html  Catalog.html  Category.html  FlatEmbeddingBatch.html  Product.html  Vibe.html  catalog.Brand.html  catalog.Catalog.html  catalog.Catalog.qmd  catalog.Product.html  catalog.html  catalog.qmd  hcf.Brand.html  hcf.Catalog.html  hcf.Catalog.qmd  hcf.Category.html  hcf.Category.qmd  hcf.Embedding.qmd  hcf.FlatEmbeddingBatch.html  hcf.ImageVibe.html  hcf.ImageVibe.qmd  hcf.Product.html  hcf.Product.qmd  hcf.TextVibe.qmd  hcf.Vibe.html  hcf.Vibe.qmd  hcf.html  hcf.qmd  index.html  index.qmd
schemas/: hushh-catalog.fbs
site_libs/bootstrap/: bootstrap.min.css
src/hushh/: Product.py
swift/Sources/: hushh-catalog_generated.swift
